--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <p class="paragraph">I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
                 don't hestiate to contact me.</p>
                 <footer class="social-media-icons">
-                    <ul class="icon" style="list-style: none;">
+                    <ul class="icon">
                         <li>
                             <a href="https://github.com/mohisa302">
                                 <img src="icon1.png" alt="github icon"></a>
