modified linters check

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
       type="text/css"
     />
-    <title>Portfolio Kazaneza</title>
+    <title>Portfolio sonika</title>
   </head>
   <body>
     <header>
