--- a/index.html
+++ b/index.html
@@ -1,203 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
-    <link
-      href="http://fonts.googleapis.com/css?family=Roboto"
-      rel="stylesheet"
-      type="text/css"
-    />
-    <title>Portfolio sonika</title>
-  </head>
-  <body>
-    <header>
-      <nav class="nav">
-        <label class="logo"><a href="">SONIKA</a></label>
-        <a href="#">
-          <img
-            class="navImage"
-            src="menubar.png"
-            alt="Navigation menu"
-          />
-        </a>
-      </nav>
-    </header>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <link rel="stylesheet" href="style.css">
+        <title>first mobile app</title>
+    </head>
 
-    <section class="container">
-      <h1 class="headline">
-        Hey there. <br />
-        I'm sonika kumar
-      </h1>
-      <h2 class="title">I'am a Software Developer</h2>
-      <p class="introduction">
-        I can help you build a product, feature or website Look through some of
-        my work and experience! If you like what you see and have a project you
-        need coded, don't hestiate to contact me.
-      </p>
-
-      <div class="icons">
-        <ul>
-          <li>
-            <a href=""><img src="icon1.png" alt="" link="#"/></a>
-          </li>
-          <li>
-            <a href=""><img src="icon2.png" alt="" link="#"/></a>
-          </li>
-          <li>
-            <a href=""><img src="icon3.png" alt="" link="#"/></a>
-          </li>
-          <li>
-            <a href=""><img src="icon4.png" alt="" link="#"></a>
-          </li>
-        </ul>
-      </div>
-    </section>
-    <section class="work">
-      <div class="multistories">
-        <h1>My Recent Works</h1>
-        <hr />
-        <img src="img1.png" alt="" />
-        <h3>Multi-Post Stories</h3>
-        <p>
-          A daily selection of privately personalized reads; no accounts or
-          sign-ups required. has been the industry's standard dummy text ever
-          since the 1500s, when an unknown printer took a standard dummy text.
-        </p>
-        <div>
-          <ul class="languages">
-            <li><img src="tag1.png" alt="" /></li>
-            <li><img src="tag2.png" alt="" /></li>
-            <li><img src="tag3.png" alt="" /></li>
-            <li><img src="tag4.png" alt="" /></li>
-          </ul>
-        </div>
-        <button>See Project</button>
-      </div>
-      <!-- professional art printing data -->
-      <div class="project">
-        <h1>Professional Art Printing Data</h1>
-        <p>
-          A daily selection of privately personalized reads; no accounts or
-          sign-ups required. has been the industry's standard
-        </p>
-        <div>
-          <ul class="projectLanguages">
-            <li><img src="tag1.png" alt="" /></li>
-            <li><img src="tag2.png" alt="" /></li>
-            <li><img src="tag3.png" alt="" /></li>
-          </ul>
-        </div>
-        <button>See Project</button>
-      </div>
-      <!-- project2 -->
-      <div class="project">
-        <h1>Professional Art Printing Data</h1>
-        <p>
-          A daily selection of privately personalized reads; no accounts or
-          sign-ups required. has been the industry's standard
-        </p>
-        <div>
-          <ul class="projectLanguages">
-            <li><img src="tag1.png" alt="" /></li>
-            <li><img src="tag2.png" alt="" /></li>
-            <li><img src="tag3.png" alt="" /></li>>
-          </ul>
-        </div>
-        <button>See Project</button>
-      </div>
-      <!-- project3 -->
-      <div class="project">
-        <h1>Professional Art Printing Data</h1>
-        <p>
-          A daily selection of privately personalized reads; no accounts or
-          sign-ups required. has been the industry's standard
-        </p>
-        <div>
-          <ul class="projectLanguages">
-            <li><img src="tag1.png" alt="" /></li>
-            <li><img src="tag2.png" alt="" /></li>
-            <li><img src="tag3.png" alt="" /></li>
-          </ul>
-        </div>
-        <button>See Project</button>
-      </div>
-      <!-- project4 -->
-      <div class="project">
-        <h1>Professional Art Printing Data</h1>
-        <p>
-          A daily selection of privately personalized reads; no accounts or
-          sign-ups required. has been the industry's standard
-        </p>
-        <div>
-          <ul class="projectLanguages">
-            <li><img src="tag1.png" alt="" /></li>
-            <li><img src="tag2.png" alt="" /></li>
-            <li><img src="tag3.png" alt="" /></li>
-          </ul>
-        </div>
-        <button>See Project</button>
-      </div>
-    </section>
-    <section class="about-me">
-      <div class="about">
-        <h1 class="headline">About me</h1>
-        <p class="introduction">
-          Hello I'm a software developer! I can help you build a product ,
-          feature or website Look through some of my work and experience! If you
-          like what you see and have a project you need coded, don't hestiate to
-          contact me.
-        </p>
-        <button>Get My Resume</button>
-      </div>
-      <div class="aboutList">
-        <ul>
-          <img src="bulleticon1" alt="" />
-          languages
-          <li>Javascript</li>
-          <li>ruby</li>
-          <li>Html</li>
-          <li>Css</li>
-        </ul>
-        <ul>
-          <img src="bulleticon2.png"" />
-          Frameworks
-          <li>Bootstrap</li>
-          <li>Ruby on Rails</li>
-          <li>Rspec</li>
-          <li>CapyBara</li>
-          <li>Selenium</li>
-        </ul>
-        <ul>
-          <img src="bulleticons.png" alt="" />
-          Skills
-          <li>Codekit</li>
-          <li>Github</li>
-          <li>Codepen</li>
-          <li>Gitlab</li>
-          <li>Terminal</li>
-        </ul>
-      </div>
-    </section>
-    <footer class="footer">
-      <div class="icons">
-        <ul>
-          <li>
-            <a href=""><img src="icon1.png" alt="" /></a>
-          </li>
-          <li>
-            <a href=""><img src="icon2.png" alt="" /></a>
-          </li>
-          <li>
-            <a href=""><img src="icon3.png" alt="" /></a>
-          </li>
-          <li>
-            <a href=""><img src="icon4.png" alt="" /></a>
-          </li>
-        </ul>
-      </div>
-    </footer>
-  </body>
-</html>
+    <body>
+            <header class="main-header">
+                <a href="#" class="header-text">John Doe</a>
+                <nav class="union">
+                    <div class="vector"></div>
+                    <div class="vector"></div>
+                    <div class="vector"></div>
+                </nav>
+            </header>
+            
+        <section class="page1">
+            <h1 class="main-title">Hey There.<br>I'm Alex</h1>
+            <h2 class="job-title">I'm a Software Developer</h2>
+            <p class="regular-text">I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
+                don’t hestiate to contact me.</p>
+                <div class="social-media">
+                    <ul class="icon">
+                        <li>
+                        <a href="https://github.com/mohisa302">
+                            <img src="icon1.png" alt="github icon"></a>
+                        </li>
+                        <li >
+                            <a href="https://www.linkedin.com/in/rachelisaac13">
+                                <img src="icon2.png" alt="linkedin icon"></a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="icon3.png" alt="github icon"></a>
+                        </li>
+                        <li>
+                            <a href="https://twitter.com/Kholochelam">
+                                <img src="icon4.png" alt="twitter icon"></a>
+                        </li>
+                        <li>
+                            <a href="#">
+                            <img src="icon5.png" alt="Medium icon"></a>
+                        </li>
+                    </ul>
+                    </div>
+                </div>    
+            </section>
+        </body>
+        </html>
