--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
                 </nav>
             </header>
     <main> 
-        <section class="pageone">
-            <div> <a href="illustrationlogo.png"> </a></div>
+        <section class="page1">
             <h1 class="main-title">Hey There.<br>I'm Alex</h1>
             <h2 class="job-title">I'm a Software Developer</h2>
             <p class="regular-text">I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
@@ -29,23 +28,23 @@
                     <ul class="icon">
                         <li>
                         <a href="https://github.com/sonikak004">
-                            <img src="icon1.png" alt="github icon"></a>
+                            <img src="/images/icon1.png" alt="github icon"></a>
                         </li>
                         <li >
-                            <a href="https://www.linkedin.com/in/sonikak004">
-                                <img src="icon2.png" alt="linkedin icon"></a>
+                            <a href="https://www.linkedin.com/in/sonikakumar">
+                                <img src="/images/icon2.png" alt="linkedin icon"></a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="icon3.png" alt="github icon"></a>
+                                <img src="/images/icon3.png" alt="icon"></a>
                         </li>
                         <li>
                             <a href="https://twitter.com/sonikak004">
-                                <img src="icon4.png" alt="twitter icon"></a>
+                                <img src="/images/icon4.png" alt="twitter icon"></a>
                         </li>
                         <li>
                             <a href="#">
-                            <img src="icon5.png" alt="icon"></a>
+                            <img src="/images/icon5.png" alt="icon"></a>
                         </li>
                     </ul>
                 </div>  
@@ -59,7 +58,7 @@
                 <div class="line"></div>
             </div>
             <section class="Works">
-                <img class="work-img" src='/img1.png' alt="project img"> 
+                <img class="work-img" src='/images/img1.png' alt="project img"> 
                 <h3 class="wtext1">Multi-Post Stories</h3>
                 <p class="wtext2"> A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s,
                      when an unknown printer took a standard dummy text.</p>  
@@ -203,7 +202,7 @@
                                 </li>
                                 <li>
                                     <nav class="ico">
-                                        <nav class="fo  lang shape3"></nav>
+                                        <nav class="fo lang shape3"></nav>
                                         <h2 class="lang">Skills</h2>
                                     </nav>
                                     <ul class="lang">
@@ -217,16 +216,43 @@
                                 </ul>
             </div>
         </section>  
-        <form class="contact">
-                <p class="contact-text">I'm always interested in hearing about new projects,
-                     so if you'd like to chat please get in touch.</p>
-                <input class="form-text" placeholder="Full name" type="text" required>
-                <div class="form-line2"></div>
-                <input class="form-text" placeholder="Email address" type="email" required>
-                <div class="form-line2"></div>
-                <textarea class="form-text2" placeholder="Enter text here"></textarea>
-                <button class="ltext1 sub-bot" type="submit">Get in touch</button>
-        </form>
-    </main> 
+        <footer class="contact">
+            <p class="contact-text">I'm always interested in hearing about new projects,
+                so if you'd like to chat please get in touch.</p>
+                <form class="form-action" action="https://formspree.io/f/moqbgdbk" method="post">
+                    <input class="form-text" placeholder="Full name" type="text" maxlength="30" required>
+                    <div class="form-line2"></div>
+                    <input class="form-text" placeholder="Email address" type="email" required>
+                    <div class="form-line2"></div>
+                    <textarea class="form-text2" name="comment" placeholder="Enter text here" maxlength="500"></textarea>
+                    <button class="ltext1 sub-bot" type="submit">Get in touch</button>
+                </form>
+                <div class="form-line"></div>
+                <div class="social-media-under">
+                    <ul class="icon">
+                    <li>
+                        <a href="https://github.com/mohisa302">
+                            <img src="/images/darkicon0.png" alt="github icon"></a>
+                        </li>
+                        <li >
+                            <a href="https://www.linkedin.com/in/rachelisaac13">
+                                <img src="/images/darkicon2.png" alt="linkedin icon"></a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <img src="/images/darkicon3.png" alt="github icon"></a>
+                                </li>
+                                <li>
+                                    <a href="https://twitter.com/Kholochelam">
+                                        <img src="/images/darkicon4.png" alt="twitter icon"></a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <img src="/images/darkicon1.png" alt="Medium icon"></a>
+                                        </li>
+                                    </ul>
+                                </div>  
+                            </footer>
+                        </main> 
     </body>
 </html>
