modified css and html file

--- a/index.html
+++ b/index.html
@@ -28,23 +28,23 @@
                     <ul class="icon">
                         <li>
                         <a href="https://github.com/sonikak004">
-                            <img src="/images/icon1.png" alt="github icon"></a>
+                            <img src="./images/icon1.png" alt="github icon"></a>
                         </li>
                         <li >
                             <a href="https://www.linkedin.com/in/sonikakumar">
-                                <img src="/images/icon2.png" alt="linkedin icon"></a>
+                                <img src="./images/icon2.png" alt="linkedin icon"></a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="/images/icon3.png" alt="icon"></a>
+                                <img src="./images/icon3.png" alt="icon"></a>
                         </li>
                         <li>
                             <a href="https://twitter.com/sonikak004">
-                                <img src="/images/icon4.png" alt="twitter icon"></a>
+                                <img src="./images/icon4.png" alt="twitter icon"></a>
                         </li>
                         <li>
                             <a href="#">
-                            <img src="/images/icon5.png" alt="icon"></a>
+                            <img src="./images/icon5.png" alt="icon"></a>
                         </li>
                     </ul>
                 </div>  
@@ -58,7 +58,7 @@
                 <div class="line"></div>
             </div>
             <section class="Works">
-                <img class="work-img" src='/images/img1.png' alt="project img"> 
+                <img class="work-img" src='./images/img1.png' alt="project img"> 
                 <h3 class="wtext1">Multi-Post Stories</h3>
                 <p class="wtext2"> A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s,
                      when an unknown printer took a standard dummy text.</p>  
@@ -231,23 +231,23 @@
                     <ul class="icon">
                     <li>
                         <a href="https://github.com/mohisa302">
-                            <img src="/images/darkicon0.png" alt="github icon"></a>
+                            <img src="./images/darkicon0.png" alt="github icon"></a>
                         </li>
                         <li >
                             <a href="https://www.linkedin.com/in/rachelisaac13">
-                                <img src="/images/darkicon2.png" alt="linkedin icon"></a>
+                                <img src="./images/darkicon2.png" alt="linkedin icon"></a>
                             </li>
                             <li>
                                 <a href="#">
-                                    <img src="/images/darkicon3.png" alt="github icon"></a>
+                                    <img src="./images/darkicon3.png" alt="github icon"></a>
                                 </li>
                                 <li>
                                     <a href="https://twitter.com/Kholochelam">
-                                        <img src="/images/darkicon4.png" alt="twitter icon"></a>
+                                        <img src="./images/darkicon4.png" alt="twitter icon"></a>
                                     </li>
                                     <li>
                                         <a href="#">
-                                            <img src="/images/darkicon1.png" alt="Medium icon"></a>
+                                            <img src="./images/darkicon1.png" alt="Medium icon"></a>
                                         </li>
                                     </ul>
                                 </div>  
