--- a/index.html
+++ b/index.html
@@ -227,14 +227,14 @@
                     <button class="ltext1 sub-bot" type="submit">Get in touch</button>
                 </form>
                 <div class="form-line"></div>
-                <div class="social-media-under">
+                <div class="social-media-below">
                     <ul class="icon">
                     <li>
-                        <a href="https://github.com/mohisa302">
+                        <a href="https://github.com/sonikak004">
                             <img src="./images/darkicon0.png" alt="github icon"></a>
                         </li>
                         <li >
-                            <a href="https://www.linkedin.com/in/rachelisaac13">
+                            <a href="https://www.linkedin.com/in/sonikakumar">
                                 <img src="./images/darkicon1.png" alt="linkedin icon"></a>
                             </li>
                             <li>
@@ -242,7 +242,7 @@
                                     <img src="./images/darkicon2.png" alt="github icon"></a>
                                 </li>
                                 <li>
-                                    <a href="https://twitter.com/Kholochelam">
+                                    <a href="https://twitter.com/sonikak004">
                                         <img src="./images/darkicon3.png" alt="twitter icon"></a>
                                     </li>
                                     <li>
